# oj-problem

./: .gitignore  CMakeLists.txt  playground.cpp
acwing/: 002.cpp  154.cpp  785.cpp  786.cpp  787.cpp  788.cpp  789.cpp  790.cpp  791.cpp  792.cpp  793.cpp  794.cpp  795.cpp  802.cpp  803.cpp  826.cpp  835.cpp  840.cpp  841.cpp  842.cpp  846.cpp
algorithms/datastructure/: heap.cpp  input.txt
algorithms/string/: horspool.cpp  sumday.cpp
aoj/courses/ALDS1/: 1_a.cpp  1_b.cpp  1_c.cpp
aoj/courses/ITP1/: 1_d.cpp
csp/: 202104-1.cpp  202104-2.cpp  202109-1.cpp  202109-2.cpp  202112-1.cpp  202112-2.cpp  202203-2.cpp
cxydmmszn/ch1/: TwoStackQueue.cpp  getMin1.cpp  getMin2.cpp
lanqiao/exercise/basic/: 02.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  29.cpp  30.cpp
leetcode/cpp/: 100-相同的树.cpp  101-对称二叉树.cpp  1091-二进制矩阵中的最短路径.cpp  11-盛最多水的容器.cpp  1161-最大层内元素和.cpp  125-验证回文串.cpp  1282-用户分组.cpp  130-被围绕的区域.cpp  1403-非递增顺序的最小子序列.cpp  1408-数组中的字符串匹配.cpp  1450-在既定时间做作业的学生人数.cpp  15-三数之和.cpp  151-颠倒字符串中的单词.cpp  1518-water-bottles.cpp  152-乘积最大子数组.cpp  155-最小栈.cpp  16-最接近的三数之和.cpp  167-两数之和-ii-输入有序数组.cpp  17-电话号码的字母组合.cpp  1720-decode-xored-array.cpp  1732-find-the-highest-altitude.cpp  198-打家劫舍.cpp  199-二叉树的右视图.cpp  201-数字范围按位与.cpp  208-实现-trie-前缀树.cpp  209-长度最小的子数组.cpp  210-课程表-ii.cpp  213-打家劫舍-ii.cpp  215-数组中的第k个最大元素.cpp  22-括号生成.cpp  232-用栈实现队列.cpp  238-除自身以外数组的乘积.cpp  26-删除有序数组中的重复项.cpp  27-移除元素.cpp  283-移动零.cpp  3-无重复字符的最长子串.cpp  303-区域和检索-数组不可变.cpp  304-二维区域和检索-矩阵不可变.cpp  31-下一个排列.cpp  322-零钱兑换.cpp  (+54 more)
leetcode/cpp/include/: display.h  headers.h
leetcode/editor/cn/: 1078-occurrences-after-bigram.cpp  2100-find-good-days-to-rob-the-bank.cpp  257-binary-tree-paths.cpp  419-battleships-in-a-board.cpp
leetcode/editor/cn/doc/: all.json
leetcode/editor/cn/doc/content/: 1078-occurrences-after-bigram.md  1518-water-bottles.md  1609-even-odd-tree.md  1610-maximum-number-of-visible-points.md  1705-maximum-number-of-eaten-apples.md  1720-decode-xored-array.md  1732-find-the-highest-altitude.md  2100-find-good-days-to-rob-the-bank.md  257-binary-tree-paths.md  419-battleships-in-a-board.md  521-longest-uncommon-subsequence-i.md  851-loud-and-rich.md  883-projection-area-of-3d-shapes.md
leetcode/editor/cn/doc/submission/: 1609-even-odd-tree251963724.txt
leetcode/editor/cn/include/: headers.h
luogu/: 1093.cpp  P1009.cpp  P1042.cpp  P1045.cpp  P1059.cpp  P1067.cpp  P1075.cpp  P1098.cpp  P1125.cpp  P1161.cpp  P1177.cpp  P1205.cpp  P1217.cpp  P1271.cpp  P1303.cpp  P1304.cpp  P1319.cpp  P1320.cpp  P1321.cpp  P1328.cpp  P1420.cpp  P1518.cpp  P1553.cpp  P1554.cpp  P1563.cpp  P1591.cpp  P1597.cpp  P1598.cpp  P1601.cpp  P1603.cpp  P1614.cpp  P1720.cpp  P1765.cpp  P1781.cpp  P1786.cpp  P1789.cpp  P1914.cpp  P1923.cpp  P1957.cpp  P2141.cpp  (+32 more)
poj/: 1852-Ants.cpp  1979-red-and-black.cpp  2386-lake-counting.cpp  3009-curling2.0  3009-curling2.0.cpp  3069-saruman-s-army.cpp  3253-Fence-Repair.cpp  3299-humidex.cpp  3617-Best-Cow-Line.cpp
poj/learn/: 01package.cpp  coin.cpp  completepackage.cpp  intervalSchedual.cpp  longestCommonSubsequence.cpp  permutation.cpp  shortestPathOfMaze.cpp
