cmake_minimum_required(VERSION 3.20)
project(poj_problem)

set(CMAKE_CXX_STANDARD 17)

add_executable(1852-Ants poj/1852-Ants.cpp)
add_executable(2386-lake-counting poj/2386-lake-counting.cpp)
add_executable(shortestPathOfMaze poj/learn/shortestPathOfMaze.cpp)
add_executable(permutation poj/learn/permutation.cpp)
add_executable(coin poj/learn/coin.cpp)
add_executable(intervalSchedual poj/learn/intervalSchedual.cpp)
add_executable(3617-Best-Cow-Line poj/3617-Best-Cow-Line.cpp)
add_executable(3069-saruman-s-army poj/3069-saruman-s-army.cpp)
add_executable(3299-humidex poj/3299-humidex.cpp)
add_executable(3253-Fence-Repair poj/3253-Fence-Repair.cpp)
add_executable(01package poj/learn/01package.cpp)
add_executable(longestCommonSubsequence poj/learn/longestCommonSubsequence.cpp)
add_executable(completepackage poj/learn/completepackage.cpp)
add_executable(getMin cxydmmszn/ch1/getMin1.cpp)
add_executable(getMin2 cxydmmszn/ch1/getMin2.cpp)
add_executable(TwoStackQueue cxydmmszn/ch1/TwoStackQueue.cpp)
add_executable(1078-occurrences-after-bigram leetcode/editor/cn/1078-occurrences-after-bigram.cpp)
add_executable(521-longest-uncommon-subsequence-i leetcode/editor/cn/521-longest-uncommon-subsequence-i.cpp)
add_executable(2100-find-good-days-to-rob-the-bank leetcode/editor/cn/2100-find-good-days-to-rob-the-bank.cpp)
add_executable(P1217 luogu/P1217.cpp)
add_executable(P1720 luogu/P1720.cpp)
add_executable(P5724 luogu/P5724.cpp)
add_executable(P1420 luogu/P1420.cpp)
add_executable(P1075 luogu/P1075.cpp)
add_executable(P5725 luogu/P5725.cpp)
add_executable(P5726 luogu/P5726.cpp)