cmake_minimum_required(VERSION 3.20)
project(poj_problem)

set(CMAKE_CXX_STANDARD 17)

add_executable(1852-Ants poj/1852-Ants.cpp)
add_executable(2386-lake-counting poj/2386-lake-counting.cpp)
add_executable(shortestPathOfMaze poj/learn/shortestPathOfMaze.cpp)
add_executable(permutation poj/learn/permutation.cpp)
add_executable(coin poj/learn/coin.cpp)
add_executable(intervalSchedual poj/learn/intervalSchedual.cpp)
add_executable(3617-Best-Cow-Line poj/3617-Best-Cow-Line.cpp)
add_executable(3069-saruman-s-army poj/3069-saruman-s-army.cpp)
add_executable(3299-humidex poj/3299-humidex.cpp)
add_executable(3253-Fence-Repair poj/3253-Fence-Repair.cpp)
add_executable(01package poj/learn/01package.cpp)
add_executable(longestCommonSubsequence poj/learn/longestCommonSubsequence.cpp)
add_executable(completepackage poj/learn/completepackage.cpp)
add_executable(getMin cxydmmszn/ch1/getMin1.cpp)
add_executable(getMin2 cxydmmszn/ch1/getMin2.cpp)
add_executable(TwoStackQueue cxydmmszn/ch1/TwoStackQueue.cpp)
add_executable(1078-occurrences-after-bigram leetcode/editor/cn/1078-occurrences-after-bigram.cpp)
add_executable(521-longest-uncommon-subsequence-i leetcode/editor/cn/521-longest-uncommon-subsequence-i.cpp)
add_executable(2100-find-good-days-to-rob-the-bank leetcode/editor/cn/2100-find-good-days-to-rob-the-bank.cpp)
add_executable(P1217 luogu/P1217.cpp)
add_executable(P1720 luogu/P1720.cpp)
add_executable(P5724 luogu/P5724.cpp)
add_executable(P1420 luogu/P1420.cpp)
add_executable(P1075 luogu/P1075.cpp)
add_executable(P5725 luogu/P5725.cpp)
add_executable(P5726 luogu/P5726.cpp)
add_executable(P4956 luogu/P4956.cpp)
add_executable(P5727 luogu/P5727.cpp)
add_executable(P5728 luogu/P5728.cpp)
add_executable(P5729 luogu/P5729.cpp)
add_executable(P2550 luogu/P2550.cpp)
add_executable(P2615 luogu/P2615.cpp)
add_executable(P5730 luogu/P5730.cpp)
add_executable(P1554 luogu/P1554.cpp)
add_executable(P2141 luogu/P2141.cpp)
add_executable(P1614 luogu/P1614.cpp)
add_executable(P2911 luogu/P2911.cpp)
add_executable(P1161 luogu/P1161.cpp)
add_executable(P5731 luogu/P5731.cpp)
add_executable(playground playground.cpp)
add_executable(P5732 luogu/P5732.cpp)
add_executable(P1789 luogu/P1789.cpp)
add_executable(P1319 luogu/P1319.cpp)
add_executable(P1320 luogu/P1320.cpp)
add_executable(P1205 luogu/P1205.cpp)
add_executable(P5733 luogu/P5733.cpp)
add_executable(P1914 luogu/P1914.cpp)
add_executable(P1125 luogu/P1125.cpp)
add_executable(P1957 luogu/P1957.cpp)
add_executable(P5015 luogu/P5015.cpp)
add_executable(P5734 luogu/P5734.cpp)
add_executable(P1765 luogu/P1765.cpp)
add_executable(P3741 luogu/P3741.cpp)
add_executable(P1321 luogu/P1321.cpp)
add_executable(P1553 luogu/P1553.cpp)
add_executable(P1603 luogu/P1603.cpp)
add_executable(P1597 luogu/P1597.cpp)
add_executable(P1598 luogu/P1598.cpp)
add_executable(P5735 luogu/P5735.cpp)
add_executable(P5736 luogu/P5736.cpp)
add_executable(P5737 luogu/P5737.cpp)
add_executable(P5738 luogu/P5738.cpp)
add_executable(P5739 luogu/P5739.cpp)
add_executable(P5461 luogu/P5461.cpp)
add_executable(P5740 luogu/P5740.cpp)
add_executable(P5741 luogu/P5741.cpp)
add_executable(P5742 luogu/P5742.cpp)
add_executable(P1304 luogu/P1304.cpp)
add_executable(P2415 luogu/P2415.cpp)
add_executable(P5743 luogu/P5743.cpp)
add_executable(P5744 luogu/P5744.cpp)
add_executable(P1042 luogu/P1042.cpp)
add_executable(P2670 luogu/P2670.cpp)
add_executable(P1563 luogu/P1563.cpp)
add_executable(P1601 luogu/P1601.cpp)
add_executable(P1303 luogu/P1303.cpp)
add_executable(1732-find-the-highest-altitude leetcode/editor/cn/1732-find-the-highest-altitude.cpp)
add_executable(1720-decode-xored-array leetcode/editor/cn/1720-decode-xored-array.cpp)
add_executable(883-projection-area-of-3d-shapes leetcode/editor/cn/883-projection-area-of-3d-shapes.cpp)
add_executable(P1009 luogu/P1009.cpp)
add_executable(P4924 luogu/P4924.cpp)
add_executable(P1328 luogu/P1328.cpp)
add_executable(P1518 luogu/P1518.cpp)
add_executable(P1067 luogu/P1067.cpp)
add_executable(P1098 luogu/P1098.cpp)
add_executable(P1786 luogu/P1786.cpp)
add_executable(P1271 luogu/P1271.cpp)
add_executable(P1591 luogu/P1591.cpp)
add_executable(P1923 luogu/P1923.cpp)
add_executable(P1177 luogu/P1177.cpp)
add_executable(P1059 luogu/P1059.cpp)
add_executable(P1045 luogu/P1045.cpp)
add_executable(1093 luogu/1093.cpp)
add_executable(P1781 luogu/P1781.cpp)
add_executable(P2676 luogu/P2676.cpp)